Made paths relative to home directory